--- a/public/css/style.css
+++ b/public/css/style.css
@@ -587,6 +587,16 @@ body:is(.dark *){
   color: rgb(238 238 238 / var(--tw-text-opacity, 1));
 }
 
+section{
+  scroll-margin-top: 1.25rem;
+}
+
+@media (min-width: 768px){
+  section{
+    scroll-margin-top: 1.5rem;
+  }
+}
+
 .container{
   width: 100%;
   margin-right: auto;
@@ -1394,6 +1404,10 @@ body:is(.dark *){
   resize: both;
 }
 
+.scroll-mt-5{
+  scroll-margin-top: 1.25rem;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1725,11 +1739,6 @@ body:is(.dark *){
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 
 .py-3{
@@ -2574,11 +2583,6 @@ body:is(.dark *){
   .md\:py-20{
     padding-top: 5rem;
     padding-bottom: 5rem;
-  }
-
-  .md\:py-24{
-    padding-top: 6rem;
-    padding-bottom: 6rem;
   }
 
   .md\:pt-32{
