--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1086,6 +1086,30 @@ section{
   top: 64px;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
+.-bottom-1{
+  bottom: -0.25rem;
+}
+
+.-bottom-2{
+  bottom: -0.5rem;
+}
+
+.bottom-10{
+  bottom: 2.5rem;
+}
+
+.right-10{
+  right: 2.5rem;
+}
+
+.top-10{
+  top: 2.5rem;
+}
+
 .-z-10{
   z-index: -10;
 }
@@ -1143,6 +1167,10 @@ section{
   margin-bottom: 2rem;
 }
 
+.mr-1{
+  margin-right: 0.25rem;
+}
+
 .mr-2{
   margin-right: 0.5rem;
 }
@@ -1161,6 +1189,10 @@ section{
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .block{
@@ -1267,6 +1299,10 @@ section{
   height: 100%;
 }
 
+.h-40{
+  height: 10rem;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -1337,6 +1373,19 @@ section{
 
 .w-full{
   width: 100%;
+}
+
+.w-0{
+  width: 0px;
+}
+
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-40{
+  width: 10rem;
 }
 
 .max-w-0{
@@ -1455,6 +1504,10 @@ section{
   gap: 2rem;
 }
 
+.gap-12{
+  gap: 3rem;
+}
+
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1483,6 +1536,18 @@ section{
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden{
@@ -1549,6 +1614,15 @@ section{
 
 .border-transparent{
   border-color: transparent;
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
+}
+
+.border-gray-200\/20{
+  border-color: rgb(229 231 235 / 0.2);
 }
 
 .bg-blue-500{
@@ -1637,6 +1711,14 @@ section{
   background-color: rgb(234 179 8 / var(--tw-bg-opacity, 1));
 }
 
+.bg-primary\/5{
+  background-color: rgb(0 173 181 / 0.05);
+}
+
+.bg-white\/80{
+  background-color: rgb(255 255 255 / 0.8);
+}
+
 .bg-gradient-to-b{
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1673,6 +1755,11 @@ section{
 
 .to-white\/5{
   --tw-gradient-to: rgb(255 255 255 / 0.05) var(--tw-gradient-to-position);
+}
+
+.bg-clip-text{
+  -webkit-background-clip: text;
+          background-clip: text;
 }
 
 .object-cover{
@@ -1751,12 +1838,29 @@ section{
   padding-bottom: 2rem;
 }
 
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pt-16{
   padding-top: 4rem;
 }
 
 .pt-24{
   padding-top: 6rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 
 .text-center{
@@ -1796,6 +1900,11 @@ section{
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold{
@@ -1892,6 +2001,10 @@ section{
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
 }
 
+.text-transparent{
+  color: transparent;
+}
+
 .opacity-0{
   opacity: 0;
 }
@@ -1926,8 +2039,19 @@ section{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.blur-3xl{
+  --tw-blur: blur(64px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.backdrop-blur-md{
+  --tw-backdrop-blur: blur(12px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition-all{
@@ -2214,6 +2338,16 @@ section{
   bottom: -0.25rem;
 }
 
+.after\:bottom-0::after{
+  content: var(--tw-content);
+  bottom: 0px;
+}
+
+.after\:left-0::after{
+  content: var(--tw-content);
+  left: 0px;
+}
+
 .after\:h-0\.5::after{
   content: var(--tw-content);
   height: 0.125rem;
@@ -2222,6 +2356,11 @@ section{
 .after\:w-full::after{
   content: var(--tw-content);
   width: 100%;
+}
+
+.after\:w-1\/2::after{
+  content: var(--tw-content);
+  width: 50%;
 }
 
 .after\:bg-primary::after{
@@ -2325,6 +2464,10 @@ section{
   --tw-ring-color: rgb(0 173 181 / 0.2);
 }
 
+.group:hover .group-hover\:w-full{
+  width: 100%;
+}
+
 .group:hover .group-hover\:max-w-full{
   max-width: 100%;
 }
@@ -2351,6 +2494,10 @@ section{
 
 .dark\:border-primary-gray\/50:is(.dark *){
   border-color: rgb(57 62 70 / 0.5);
+}
+
+.dark\:border-primary-gray\/20:is(.dark *){
+  border-color: rgb(57 62 70 / 0.2);
 }
 
 .dark\:bg-blue-500\/10:is(.dark *){
@@ -2395,6 +2542,10 @@ section{
 
 .dark\:bg-primary\/20:is(.dark *){
   background-color: rgb(0 173 181 / 0.2);
+}
+
+.dark\:bg-primary-black\/80:is(.dark *){
+  background-color: rgb(34 40 49 / 0.8);
 }
 
 .dark\:to-gray-900\/5:is(.dark *){
@@ -2458,6 +2609,19 @@ section{
 }
 
 @media (min-width: 640px){
+  .sm\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
+
+  .sm\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .sm\:mt-8{
+    margin-top: 2rem;
+  }
+
   .sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2470,6 +2634,14 @@ section{
     align-items: flex-start;
   }
 
+  .sm\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .sm\:gap-8{
+    gap: 2rem;
+  }
+
   .sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2480,8 +2652,32 @@ section{
     padding-bottom: 4rem;
   }
 
+  .sm\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .sm\:pt-8{
+    padding-top: 2rem;
+  }
+
   .sm\:text-left{
     text-align: left;
+  }
+
+  .sm\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .sm\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .sm\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
